# moore57

./: .gitignore  CLAUDE.md  Moore57.lean  README.md  d38.py  environment.yml  gaps.md  lake-manifest.json  lakefile.toml  moore57_d19_contradiction.md  moore57_d19_lean_aware_proof.md  papers_info.md  pyproject.toml  requirements.txt
Moore57/: AFiberAllFibersCardinalityBoundary.lean  AFiberCardinality38FromClosures.lean  AFiberCardinalityBoundary.lean  AFiberCardinalityContributionBoundary.lean  AFiberContributionCardinalityCriteria.lean  AFiberContributionDecomposition.lean  AFiberContributionOnlyCriteria.lean  AFiberContributionRotationInvariance.lean  AFiberCoordinateAdjacency.lean  AFiberCoordinateConstruction.lean  AFiberCoordinateOrbit.lean  AFiberCoordinateReflection.lean  AFiberCoordinateRotation.lean  AFiberCoordinates.lean  AFiberCoordinatesOfBranchesMatchingId.lean  AFiberFiberUnionCardinality.lean  AFiberHybridBoundaryFromCriteria.lean  AFiberMatchingExceptionSetBoundary.lean  AFiberMatchingFixedCountSupport.lean  AFiberMatchingPerm.lean  AFiberMatchingPermAdjacency.lean  AFiberMatchingPermSymmetry.lean  AFiberMatchingRotationTransportBoundary.lean  AFiberMatchingStepBound.lean  AFiberMatchingSupportEquations.lean  AFiberMidpointReflectionCriterion.lean  AFiberOnlyContributionConstant.lean  AFiberOrbitBaseSelection.lean  AFiberOrbitBaseSelectionCover.lean  AFiberOrbitBaseSelectionMoved.lean  AFiberOrbitCardinalityBoundary.lean  AFiberOrbitMoved.lean  AFiberOrbitMovingResidual.lean  AFiberReflectionTransport.lean  AFiberResidualSplitBridge.lean  (+449 more)
(+1277 files in other folders)
